--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,13 @@
     "sourceMap": true,
     "target": "es2017",
     "outDir": "./dist",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
