--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "envalid": "^6.0.1",
     "express": "^4.17.1",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
