create declarations.d.ts and include it in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "declarations.d.ts"],
   "exclude": ["node_modules"]
 }
