--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "dotenv": "^8.2.0",
     "envalid": "^6.0.1",
     "express": "^4.17.1",
+    "mongoose": "^5.9.13",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.16",
     "ts-node-dev": "^1.0.0-pre.44"
   }
 }
